--- a/ClientApp/src/app/administrativo/pages/pacientes/pacientes.component.html
+++ b/ClientApp/src/app/administrativo/pages/pacientes/pacientes.component.html
@@ -1,5 +1,6 @@
 <div class="pacientes-section">
   <h2>Pacientes</h2>
+  <app-snackbar #snackbar></app-snackbar>
   <div *ngIf="notificacion" class="notification">{{ notificacion }}</div>
 
   <!-- Filtro y botón de agregar paciente -->
