--- a/ClientApp/src/app/shared/habitaciones/habitaciones.component.html
+++ b/ClientApp/src/app/shared/habitaciones/habitaciones.component.html
@@ -1,7 +1,7 @@
 <div class="habitaciones-section">
   <h2>Habitaciones</h2>
   <div class="table-container">
-    <app-snackbar></app-snackbar>
+    <app-snackbar #snackbar></app-snackbar>
     <table class="table">
       <thead>
         <tr>
