--- a/ClientApp/src/app/shared/pacientes/pacientes.component.html
+++ b/ClientApp/src/app/shared/pacientes/pacientes.component.html
@@ -1,6 +1,6 @@
 <div class="pacientes-section">
   <h2>Pacientes</h2>
-
+  <app-snackbar #snackbar></app-snackbar>
   <!-- Botón de agregar paciente -->
   <div class="filter-container">
     <button mat-raised-button color="primary" (click)="toggleFormularioAgregar()">
