--- a/ClientApp/src/app/shared/roles/roles.component.html
+++ b/ClientApp/src/app/shared/roles/roles.component.html
@@ -1,5 +1,7 @@
 <div class="roles-section">
   <h2>Roles</h2>
+  <app-snackbar #snackbar></app-snackbar>
+
   <app-search-box [searchOptions]="[
       { label: 'Nombre', value: 'nombreRol' },
       { label: 'ID', value: 'id' }
