--- a/ClientApp/src/app/shared/usuarios/usuarios.component.html
+++ b/ClientApp/src/app/shared/usuarios/usuarios.component.html
@@ -1,7 +1,9 @@
 <div class="usuarios-section">
   <h2>Usuarios</h2>
+  <app-snackbar #snackbar></app-snackbar>
+
   <!-- Caja de búsqueda -->
-  <app-search-box 
+  <app-search-box
   [searchOptions]="[
   { label: 'ID Usuario', value: 'IdUsuario' },
   { label: 'Nombre', value: 'Nombre' },
@@ -9,8 +11,8 @@
   { label: 'ID Rol', value: 'IdRol' }
 ]"
    [defaultSearchType]="'IdUsuario'" placeholder="Escribe para buscar..." (search)="filtrarUsuarios($event)">
-  </app-search-box>  
-  
+  </app-search-box>
+
   <!--Tabla Angular Material-->
   <div class="table-container">
     <table mat-table [dataSource]="usuarios" matSort class="mat-elevation-z8">
@@ -49,7 +51,7 @@
 
       <!-- Header de la tabla -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-       
+
       <!-- Filas de la tabla -->
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
